--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "downloadjs": "^1.4.7",
     "embla-carousel-react": "^8.3.0",
-    "html-to-image": "^1.11.11",
+    "html-to-image": "^1.11.13",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
